<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections_button">Upcoming Elections</string>
    <string name="find_representatives_button">Find Representatives</string>
    <string name="upcoming_elections_header">Upcoming Elections</string>
    <string name="saved_elections_header">Saved Elections</string>
    <string name="follow">Follow Election</string>
    <string name="unfollow">Unfollow Election</string>
    <string name="election_information">Election Information</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="my_representatives">My Representatives</string>
    <string name="use_my_location">Use My Location</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="zip">Zip</string>
    <string name="city">City</string>
    <string name="address_2">Address 2</string>
    <string name="address_1">Address 1</string>
    <string name="representatives_search">Representatives Search</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="can_not_get_election">"Can't get upcoming elections"</string>
</resources>
